core/unpackaged/main/default/objects/Commerce_Search_Index__c/Commerce_Search_Index__c.object-meta.xml
<CustomObject>
    <label>Commerce Search Index</label>
    <nameField>
        <displayFormat>CSI-{000000000}</displayFormat>
        <label>Commerce Search Index Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commerce Search Indicies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>