core/unpackaged/main/default/objects/Commerce_Search_Index__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Commerce Search Indicies</relationshipLabel>
    <relationshipName>Commerce_Search_Indicies</relationshipName>
    <type>Lookup</type>
</CustomField>