core/unpackaged/main/default/objects/Commerce_Search_Index__c/fields/Search_Phrases__c.field-meta.xml
<CustomField>
    <fullName>Search_Phrases__c</fullName>
    <label>Search Phrases</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>