core/unpackaged/main/default/objects/Commerce_Search_Index__c/fields/Unique_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Unique_Product_Id__c</fullName>
    <externalId>true</externalId>
    <label>Unique Product Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>